# ForgeVM

./: Cargo.toml  LICENSE  README.md  index.html  search-index.js
.github/workflows/: rust.yml
docs/vm/: struct.VM.html
docs/vm/error/: enum.VmError.html
forge_vm/: all.html  enum.Instruction.html  enum.VmError.html  index.html  sidebar-items.js  struct.VM.html
forge_vm/vm/: struct.VM.html
forge_vm/vm/cpu/: index.html  sidebar-items.js  struct.CPU.html  struct.StatusFlags.html
forge_vm/vm/decoder/: fn.read_i32.html  fn.read_u32.html  fn.register_address.html  index.html  sidebar-items.js  struct.Decoder.html
forge_vm/vm/error/: enum.VmError.html  index.html
forge_vm/vm/instructions/: enum.Instruction.html  enum.OpCode.html  index.html
forge_vm/vm/program/: index.html
forge_vm/vm/stack/: struct.Stack.html
log/: enum.LevelFilter.html  fn.set_logger_racy.html  fn.set_max_level_racy.html  macro.error.html  macro.info.html  macro.log.html  macro.trace.html  struct.SetLoggerError.html
src/: lib.rs
src/forge_vm/vm/: cpu.rs.html  decoder.rs.html  error.rs.html  instructions.rs.html  memory.rs.html  mod.rs.html  stack.rs.html
src/vm/: cpu.rs  decoder.rs  error.rs  hardware_config.rs  instructions.rs  memory.rs  mod.rs  program.rs  stack.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js  trait.PartialOrd.js
trait.impl/core/convert/: trait.TryFrom.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
(+10 files in other folders)
